<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.gym.com.br.totaltrainning11.TabsTrasaction.FinishTabsActivity$PlaceholderFragment">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:id="@+id/Perfil"
            android:layout_width="match_parent"
            android:layout_height="458dp"
            android:orientation="vertical">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="127dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/imageView2"
                    android:paddingTop="0dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/movi_logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/student"
                    android:id="@+id/aluno"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/gym"
                    android:id="@+id/academia"
                    android:layout_gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView2" />
            </RelativeLayout>

            <TextView
                android:id="@+id/sexTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorTextBackground"
                android:text="@string/sex" />

            <TextView
                android:id="@+id/sexSubtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/ageTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorTextBackground"
                android:text="@string/age"/>

            <TextView
                android:id="@+id/ageSubtitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/objectiveTitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorTextBackground"
                android:text="@string/objective" />

            <TextView
                android:id="@+id/objectiveSubtitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorSeparator"/>
            <TextView
                android:id="@+id/weightTitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorTextBackground"
                android:text="@string/weight"/>
            <TextView
                android:id="@+id/weightSubtitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/heightTitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorTextBackground"
                android:text="@string/height"
                />
            <TextView
                android:id="@+id/heightSubtitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/imcTitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@color/colorTextBackground"
                android:text="@string/imc"
                />
            <TextView
                android:id="@+id/imcSubtitleText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:textStyle="normal"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>